force-app/main/default/objects/Rclub_Number_Settings__c/Rclub_Number_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>R-club Number Settings</label>
</CustomObject>