force-app/main/default/objects/Rclub_Number_Settings__c/fields/IIN__c.field-meta.xml
<CustomField>
    <fullName>IIN__c</fullName>
    <label>IIN</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>