force-app/main/default/objects/Rclub_Number_Settings__c/fields/In_store_English__c.field-meta.xml
<CustomField>
    <fullName>In_store_English__c</fullName>
    <label>In store English</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>