force-app/main/default/objects/Rclub_Number_Settings__c/fields/Online_English__c.field-meta.xml
<CustomField>
    <fullName>Online_English__c</fullName>
    <label>Online English</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>