force-app/main/default/objects/Rclub_Number_Settings__c/fields/Online_French__c.field-meta.xml
<CustomField>
    <fullName>Online_French__c</fullName>
    <label>Online French</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>